--- a/S04.03-Exercise-AddMapAndSharing/app/src/main/res/menu/forecast.xml
+++ b/S04.03-Exercise-AddMapAndSharing/app/src/main/res/menu/forecast.xml
@@ -24,5 +24,8 @@
         android:orderInCategory="1"
         android:title="@string/action_refresh"
         app:showAsAction="ifRoom"/>
-    <!--TODO (1) Add a menu item to open the map-->
+    <item
+        android:id="@+id/action_show_map"
+        android:title="@string/Map"
+        app:showAsAction="never"/>
 </menu>
